# miniIM

./: CMakeLists.txt  README.md
.github/workflows/: ci.yaml
src/: main.cpp
tests/: test_main.cpp
